@@ -34,6 +34,11 @@
         <b data-translation="restartBook">Restart book</b>
     </button>
 
+    <button class="btn btn-default large-button" type="button" id="settings-new">
+      <img src="images/game-icons/enlightenment.png" alt="New game" />
+      <b data-translation="newGame">Start new game</b>
+    </button>
+
     <button class="btn btn-default large-button" type="button" id="settings-about">
         <img src="images/game-icons/wolf-howl.png" alt="Book" />
         <b data-translation="about">About the book</b>
