@@ -69,3 +69,4 @@
  - Book 1, sect88: Spear is capitalized, thus you should be able to take and equip it as a normal weapon
  - Book 2, sect290: According to the text, you need to eat a meal from your backpack in this section
  - Book 5, sect166: You cannot use a Shield when afflicted by Limbdeath
+ - Settings: Added option to start a new game
